# codex_auth_switch

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
cli/: Cargo.toml
cli/src/: main.rs
scripts/: fix-codex-history.ps1
src/: antigravity.ts  app-chrome-dialogs.ts  app-chrome-renderers.ts  app-preview-data.ts  desktop-state.ts  desktop-types.ts  html-utils.ts  main.ts  network-account-renderers.ts  network-profile-utils.ts  network-sharing.ts  pending-action-keys.ts  pending-actions.ts  profile-documents.ts  profile-editor-renderers.ts  profile-editor-state.ts  profile-input-builders.ts  profile-list-renderers.ts  profile-runtime-renderers.ts  profile-selection.ts  scroll-restoration.ts  session-cleanup-renderers.ts  session-export.ts  session-preview-data.ts  session-recovery-utils.ts  session-renderers.ts  session-utils.ts  settings-renderers.ts  sharing-center-renderers.ts  sharing-center-state.ts  styles.css  usage-formatters.ts  usage-stats-renderers.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: codex_enhance.rs  lib.rs  main.rs  menu_bar.rs
src-tauri/src/antigravity/: db.rs  manager.rs  mod.rs  models.rs  paths.rs  process.rs  storage.rs
src-tauri/src/core/: mod.rs  restart.rs  updates.rs
src-tauri/tests/: antigravity_db_tests.rs  antigravity_manager_tests.rs  codex_enhance_tests.rs  codex_usage_stats_tests.rs  codex_usage_tests.rs  deprecated_feature_cleanup_tests.rs  latency_probe_tests.rs  menu_bar_tests.rs  packaging_manifest_tests.rs  profile_manager_tests.rs  remote_sync_tests.rs  windows_entrypoint_tests.rs
tests/: antigravity-platform.test.ts  app-chrome-dialogs.test.ts  app-chrome-renderers.test.ts  app-preview-data.test.ts  branding.test.ts  desktop-state.test.ts  desktop-structure.test.ts  html-utils.test.ts  network-account-renderers.test.ts  network-profile-utils.test.ts  network-sharing-settings.test.ts  pending-action-keys.test.ts  pending-actions.test.ts  profile-documents.test.ts  profile-editor-state.test.ts  (+21 more)
(+45 files in other folders)
