[package]
name = "codex-auth-switch-cli"
version = "1.4.6"
edition = "2021"

[dependencies]
base64 = "0.22"
chrono = { version = "0.4", features = ["clock", "serde"] }
dirs = "6"
rusqlite = { version = "0.32", features = ["bundled"] }
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
toml = "0.8"
ureq = { version = "2", features = ["json"] }
uuid = { version = "1", features = ["serde", "v4"] }
