[package]
name = "codex-auth-switch"
version = "1.4.22"
description = "A desktop utility for switching between Codex auth profiles"
authors = ["Codex"]
edition = "2021"
default-run = "codex-auth-switch"

[lib]
name = "codex_auth_switch_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
chrono = { version = "0.4", features = ["clock", "serde"] }
dirs = "6"
filetime = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tauri = { version = "2", features = ["tray-icon"] }
thiserror = "2"
toml = "0.8"
rusqlite = { version = "0.32", features = ["bundled"] }
semver = "1"
ureq = { version = "2", features = ["json"] }
uuid = { version = "1", features = ["serde", "v4"] }

[dev-dependencies]
tempfile = "3"
